# alpha-research-lab

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
dashboard/: streamlit_app.py
docs/: methodology.md  progress_report.md
notebooks/: 01_data_exploration.ipynb  02_factor_analysis.ipynb  03_backtest_analysis.ipynb
scripts/: build_factor_panel.py  build_processed_panel.py  build_return_panel.py  download_data.py  run_backtest.py  run_factor_backtests.py
src/alpha_research/: backtest.py  data_checks.py  data_loader.py  factors.py  returns.py  risk.py  signal_processing.py  universe.py  validation.py
src/alpha_research/config/: paths.py
src/alpha_research_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_backtest.py  test_data_checks.py  test_data_loader.py  test_factors.py  test_risk.py  test_signal_processing.py  test_validation.py
